# oraculum-pln-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: envexample  faiss_db.py  file_md.py  main.py  utils.py
app/views/: chat_page.py  faiss_page.py  qa_page.py  upload_page.py
