[project]
name = "oraculum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.28.0",
    "faiss-cpu>=1.10.0",
    "git-filter-repo>=2.47.0",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "langchain>=0.3.21",
    "openai>=1.68.2",
    "python-dotenv>=1.0.1",
    "streamlit-javascript>=0.1.5",
    "streamlit>=1.43.2",
]
